fix(14): remove saved extraction draft instance